--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ cssselect==0.9.1
 gunicorn==19.1.1
 itsdangerous==0.24
 lxml==3.4.0
-newspaper3k==0.2.2
 nltk==3.0.0
 requests==2.4.3
 six==1.8.0
@@ -16,3 +15,15 @@ stevedore==1.0.0
 virtualenv==1.11.6
 virtualenv-clone==0.2.5
 virtualenvwrapper==4.3.1
+beautifulsoup4>=4.4.1
+Pillow>=3.3.0
+PyYAML>=3.11
+cssselect>=0.9.2
+lxml>=3.6.0
+nltk>=3.2.1
+requests>=2.10.0
+feedparser>=5.2.1
+tldextract>=2.0.1
+feedfinder2>=0.0.4
+jieba3k>=0.35.1
+python-dateutil>=2.5.3
