--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,16 @@ stevedore==1.0.0
 virtualenv==1.11.6
 virtualenv-clone==0.2.5
 virtualenvwrapper==4.3.1
+python-twitter>=3.3
+cfscrape>=1.9.5
+
+
+
 beautifulsoup4>=4.4.1
 Pillow>=3.3.0
 PyYAML>=3.11
 cssselect>=0.9.2
-lxml>=3.6.0>=1.9.5
+lxml>=3.6.0
 nltk>=3.2.1
 requests>=2.10.0
 feedparser>=5.2.1
@@ -22,5 +27,3 @@ tldextract>=2.0.1
 feedfinder2>=0.0.4
 jieba3k>=0.35.1
 python-dateutil>=2.5.3
-python-twitter>=3.3
-cfscrape>=1.9.5
